--- a/dashboard-page.html
+++ b/dashboard-page.html
@@ -43,11 +43,12 @@
 					<h3 id="speed">Speed</h3>
 					<p id="speedVar">1000</p><p>km/h</p>
 					<figure>
-				 	<img src="images/speed3.png" alt="icon-speed" class="icon" id="speed-icon" >
+						<a href='javascript:open_fun()' title="speed-icon" class="speed-icon">
+				 	<img src="images/speed3.png" alt="icon-speed" class="icon" ></a>
 				  </figure>
 
 					<h3 id="accelerate">Accelerate</h3>
-					<p>5500 Force</p>
+					<p id="acc-text">5500 Force</p>
 
 					 <figure>
 					 <img src="images/accc.png" alt="icon-accelerate" class="icon">
@@ -90,29 +91,16 @@
 		<figure>
 			<img src="images/food.png" alt="food-icon" class="icon" id="eatBars">
 		</figure>
+		<input type="button" id="eat" value="eat">
 
 		<h3>Water</h3>
 		<p class="water-value">5 drops left</p>
 		<figure>
 			<img src="images/water.png" alt="water-icon" class="icon" id="drinkWater">
 		</figure>
-
-		<div class="infopane food">
-						<p> <span>Food:</span> <span class="value_foodie">XXXXX</span></p>
-
-								<div class="cta foodie">
-										<a href="#">Give me food!</a>
-								</div>
+		<input type="button" id="drink" value="drink">
 
 
-		</div>
-
-		<div class="infopane drinks">
-						<p> <span>Drinks:</span> <span class="value_drinks">XXXXX</span></p>
-						<div class="cta drinks">
-								<a href="#">Give me drinks!</a>
-						</div>
-		</div>
 	</div>
 
 
