--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -19,7 +19,7 @@
         width="3"
         height="1"
         depth="1"
-        material= "src: #"wood""
+        material src: #wood
         >
       </a-box>
       <a-plane id="ground"
@@ -28,7 +28,7 @@
         width="100"
         height="100"
         color="#7BC8A4"
-        material ="src: #"grass""
+        material = src: #grass
         >
       </a-plane>
     </a-scene>
