--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -19,6 +19,7 @@
         width="3"
         height="1"
         depth="1"
+        color = #blue
         material src: #wood
         >
       </a-box>
