--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -20,7 +20,7 @@
         height="1"
         depth="1"
         color = #blue
-        material src: #wood
+        material = "src: #wood"
         >
       </a-box>
       <a-plane id="ground"
@@ -29,7 +29,7 @@
         width="100"
         height="100"
         color="#7BC8A4"
-        material = src: #grass
+        material = "src: #grass"
         >
       </a-plane>
     </a-scene>
