--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="scripts/main.js" defer></script>
-  </head> 
+  </head>
   <body>
     <a-scene background="color: #333333">
       <a-assets>
@@ -20,7 +20,7 @@
         height="1"
         depth="1"
         color = #blue
-        material = "src: #wood"
+        material = "#wood"
         >
       </a-box>
       <a-plane id="ground"
