--- a/03Textures/index.html
+++ b/03Textures/index.html
@@ -29,7 +29,7 @@
         width="100"
         height="100"
         color="#7BC8A4"
-        material = "src: #grass"
+        material = "#grass; repeat: 15 15"
         >
       </a-plane>
     </a-scene>
