--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -22,12 +22,20 @@
         depth="1"
         material="src: #wood"
         shadow
-        animation__2="property: rotation;
+        animation="property: rotation;
                    to: 90 360 180;
-                   dur: 3000;
-                   easing: linear;
+                   dur: 2000;
+                   easing: easeInOutCirc;
                    easeInOutCubic;
+                   loop: true"
+
+
+        animation__2="property: rotation;
+                   to: 360 60 180;
+                   dur: 3000;
+                   easing: easeInOutCirc;
                    loop: true" >
+
       </a-box>
       <a-box id="myOtherBox"
         position="2 1 -3"
