--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -25,8 +25,7 @@
         animation="property: rotation;
                    to: 90 360 180;
                    dur: 2000;
-                   easing: easeInOutCirc;
-                   easeInOutCubic;
+                   easing: easeInOutCubic;
                    loop: true"
 
 
