--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -28,11 +28,11 @@
                    easing: easeInOutCubic;
                    loop: true"
 
-                   animation__1="property: position;
+        animation__1="property: position";
                               position="2 2 3";
                               loop: true"
 
-        animation__2="property: material.color;
+        animation__2="property: material.color";
                   color="red";
                    loop: true" >
 
