--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -28,13 +28,8 @@
                    easing: easeInOutCubic;
                    loop: true"
 
-        animation__1="property: position";
-                              position="2 2 3";
-                              loop: true"
-
-        animation__2="property: material.color";
-                  color="red";
-                   loop: true" >
+       animation__2="property: position; to: 4 4 10; dur: 2000; easing: linear; loop: true" color="red">
+ 
 
       </a-box>
       <a-box id="myOtherBox"
