--- a/05Interaction/index.html
+++ b/05Interaction/index.html
@@ -17,45 +17,45 @@
 
       <a-entity id="mouseCursor" cursor="rayOrigin: mouse"></a-entity>
 
-      <a-box id="myBox" 
-        position="-1 1 -3" 
-        rotation="0 45 0" 
-        width="3" 
-        height="1" 
-        depth="1" 
+      <a-box id="myBox"
+        position="-1 1 -3"
+        rotation="0 45 0"
+        width="3"
+        height="1"
+        depth="1"
         material="src: #wood"
-        shadow 
+        shadow
         animation__mouseenter="
-          property: components.material.material.color; 
-          type: color; 
-          to: blue; 
-          startEvents: mouseenter; 
+          property: components.material.material.color;
+          type: color;
+          to: blue;
+          startEvents: mouseenter;
           dur: 500;"
         animation__mouseleave="
-          property: components.material.material.color; 
-          type: color; 
-          to: red; 
-          startEvents: mouseleave; 
-          dur: 500;">  
+          property: components.material.material.color;
+          type: color;
+          to: yellow; 
+          startEvents: mouseleave;
+          dur: 500;">
       </a-box>
-      <a-box id="myOtherBox" 
-        position="2 1 -3" 
-        rotation="0 45 0" 
-        width="3" 
-        height="1" 
-        depth="1" 
+      <a-box id="myOtherBox"
+        position="2 1 -3"
+        rotation="0 45 0"
+        width="3"
+        height="1"
+        depth="1"
         material="src: #wood"
-        shadow>  
+        shadow>
       </a-box>
       <a-plane id="ground"
-        position="0 0 -4" 
-        rotation="-90 0 0" 
-        width="100" 
-        height="100" 
-        color="#7BC8A4" 
+        position="0 0 -4"
+        rotation="-90 0 0"
+        width="100"
+        height="100"
+        color="#7BC8A4"
         material="src: #grass; repeat: 10 10"
         shadow>
-      </a-plane> 
+      </a-plane>
     </a-scene>
   </body>
 </html>
