--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -13,59 +13,74 @@
           <img id="wood" src="images/wood.jpg" />
           <img id="wood2" src="images/wood2.jpg" />
           <img id="grass" src="images/grass.jpg" />
+
+
       </a-assets>
 
       <a-camera>
         <a-entity id="mouseCursor"
-          cursor="fuse: true; fuseTimeout: 1500">
+          cursor="fuse: true; fuseTimeout: 1500
+          animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
+          animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1500; from: 1 1 1; to: 0.1 0.1 0.1"
+          animation__mouseleave="property: scale; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 1 1 1"
+          cursor="fuse: true;"
+          material="color: black; shader: flat"
+          position="0 0 -3"
+          geometry="primitive: ring">
         </a-entity>
-        <a-ring id="cursorRing" 
+        <a-ring id="cursorRing"
           position="0 0 -1"
           radius-inner= "0.02"
           radius-outer= "0.03"
-          material="color: red; shader: flat">
+          material="color: yellow; shader: flat">
         </a-ring>
       </a-camera>
-      
-      <a-box id="myBox" 
-        position="-1 1 -3" 
-        rotation="0 45 0" 
-        width="3" 
-        height="1" 
-        depth="1" 
+
+      <a-box id="myBox"
+        position="-1 1 -3"
+        rotation="0 45 0"
+        width="3"
+        height="1"
+        depth="1"
         src="#wood"
-        shadow 
+        shadow
         animation__mouseenter="
-          property: components.material.material.color; 
-          type: color; 
-          to: blue; 
-          startEvents: mouseenter; 
+          property: components.material.material.color;
+          type: color;
+          to: blue;
+          startEvents: mouseenter;
           dur: 500;"
         animation__mouseleave="
-          property: components.material.material.color; 
-          type: color; 
-          to: red; 
-          startEvents: mouseleave; 
-          dur: 500;">  
+          property: components.material.material.color;
+          type: color;
+          to: yellow;
+          startEvents: mouseleave;
+          dur: 500;">
       </a-box>
-      <a-box id="myOtherBox" 
-        position="2 1 -3" 
-        rotation="0 45 0" 
-        width="3" 
-        height="1" 
-        depth="1" 
+      <a-box id="myOtherBox"
+        position="2 1 -3"
+        rotation="0 45 0"
+        width="3"
+        height="1"
+        depth="1"
         src="#wood2"
-        shadow>  
+        shadow>
       </a-box>
+
+
+      <a-entity
+
+      </a-entity>
+
       <a-plane id="ground"
-        position="0 0 -4" 
-        rotation="-90 0 0" 
-        width="100" 
-        height="100" 
-        color="#7BC8A4" 
+        position="0 0 -4"
+        rotation="-90 0 0"
+        width="100"
+        height="100"
+        color="#7BC8A4"
         material="src: #grass; repeat: 10 10"
         shadow>
-      </a-plane> 
+      </a-plane>
     </a-scene>
   </body>
 </html>
