--- a/06InteractionHeadset - Copy/index.html
+++ b/06InteractionHeadset - Copy/index.html
@@ -13,17 +13,18 @@
           <img id="wood" src="images/wood.jpg" />
           <img id="wood2" src="images/wood2.jpg" />
           <img id="grass" src="images/grass.jpg" />
-          <img id="sky" src="images/sky.jpg" />
- <a-asset-item id="bar" src=".gltf"></a-asset-item>
+
+
       </a-assets>
 
       <a-camera>
-        <a-entity id="mouseCursor"
+        <a-entity id="mouseCursor"      
           cursor="fuse: true; fuseTimeout: 500
           animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
           animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 150; from: 1 1 1; to: 0.1 0.1 0.1"
           cursor="fuse: true;"
-          
+          radius-inner= "0.02"
+          radius-outer= "0.03"
           material="color: black; shader: flat"
           position="0 0 -1"
           geometry="primitive: ring">
