--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -14,8 +14,10 @@
           <img id="wood2" src="images/wood2.jpg" />
           <img id="grass" src="images/grass.jpg" />
           <img id="sky" src="images/sky.jpg" />
- <a-asset-item id="bar" src=".gltf"></a-asset-item>
+ <a-asset-item id="bar" src="scene.gltf"></a-asset-item>
       </a-assets>
+
+      <a-entity gltf-model="#bar"></a-entity>
 
       <a-camera>
         <a-entity id="mouseCursor"
@@ -23,11 +25,10 @@
           animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
           animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 150; from: 1 1 1; to: 0.1 0.1 0.1"
           cursor="fuse: true;"
-           
+
           material="color: black; shader: flat"
           position="0 0 -1"
           geometry="primitive: ring">
-
         </a-entity>
 
         <a-ring id="cursorRing"
