--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -17,7 +17,10 @@
  <a-asset-item id="bar" src="scene.gltf"></a-asset-item>
       </a-assets>
 
-      <a-entity gltf-model="#bar"></a-entity>
+      <a-entity gltf-model="#bar"
+scale="0.01 0.01 0.01" 
+      >
+    </a-entity>
 
       <a-camera>
         <a-entity id="mouseCursor"
