--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -14,11 +14,11 @@
           <img id="wood2" src="images/wood2.jpg" />
           <img id="grass" src="images/grass.jpg" />
           <img id="sky" src="images/sky.jpg" />
- <a-asset-item id="bar" src="scene.gltf"></a-asset-item>
+ <a-asset-item id="bar" src="images/scene.gltf"></a-asset-item>
       </a-assets>
 
       <a-entity gltf-model="#bar"
-scale="0.01 0.01 0.01" 
+scale="0.01 0.01 0.01"
       >
     </a-entity>
 
