--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -20,13 +20,13 @@
       <a-entity gltf-model="#bar"
 scale="0.01 0.01 0.01"
       >
-    </a-entity>      
+    </a-entity>
 
       <a-camera>
         <a-entity id="mouseCursor"
           cursor="fuse: true; fuseTimeout: 500
           animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
-          animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 150; from: 1 1 1; to: 0.1 0.1 0.1"
+          animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 150; from: 0.2 0.2 0.2; to: 0.1 0.1 0.1"
           cursor="fuse: true;"
 
           material="color: black; shader: flat"
@@ -43,41 +43,7 @@ scale="0.01 0.01 0.01"
 
       </a-camera>
 
-      <a-box id="myBox"
-        position="-1 1 -3"
-        rotation="0 45 0"
-        width="3"
-        height="1"
-        depth="1"
-        src="#wood"
-        shadow
-        animation__mouseenter="
-          property: components.material.material.color;
-          type: color;
-          to: blue;
-          startEvents: mouseenter;
-          dur: 500;"
-        animation__mouseleave="
-          property: components.material.material.color;
-          type: color;
-          to: yellow;
-          startEvents: mouseleave;
-          dur: 500;">
-      </a-box>
-      <a-box id="myOtherBox"
-        position="2 1 -3"
-        rotation="0 45 0"
-        width="3"
-        height="1"
-        depth="1"
-        src="#wood2"
-        shadow>
-      </a-box>
 
-
-      <a-entity
-
-      </a-entity>
 
       <a-plane id="ground"
         position="0 0 -4"
@@ -85,7 +51,7 @@ scale="0.01 0.01 0.01"
         width="100"
         height="100"
         color="#7BC8A4"
-        material="src: #grass; repeat: 10 10"
+        material="src: #wood; repeat: 10 10"
         shadow>
       </a-plane>
     </a-scene>
