--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -18,7 +18,7 @@
       </a-assets>
 
       <a-entity gltf-model="#bar"
-scale="0.01 0.01 0.01"
+scale="0.01 0.01 0.01" position="0 0.284 0"
       >
     </a-entity>
 
