--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -13,12 +13,14 @@
           <img id="wood" src="images/wood.jpg" />
           <img id="wood2" src="images/wood2.jpg" />
           <img id="grass" src="images/grass.jpg" />
+          <img id="wood3" src="images/Wooden_Floor_baseColor.jpg">
           <img id="sky" src="images/sky.jpg" />
  <a-asset-item id="bar" src="images/scene.gltf"></a-asset-item>
       </a-assets>
 
       <a-entity gltf-model="#bar"
-scale="0.01 0.01 0.01" position="0 0.284 0"
+      scale="0.01 0.01 0.01"
+      position="0 0.284 0"
       >
     </a-entity>
 
