--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -53,7 +53,7 @@
         width="100"
         height="100"
         color="#7BC8A4"
-        material="src: #wood; repeat: 10 10"
+        material="src: #wood3"
         shadow>
       </a-plane>
     </a-scene>
