--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -13,7 +13,7 @@
           <img id="wood" src="images/wood.jpg" />
           <img id="wood2" src="images/wood2.jpg" />
           <img id="grass" src="images/grass.jpg" />
-          <img id="wood3" src="images/Wooden_Floor_baseColor.jpg">
+          <img id="wood3" src="images/Wooden_Floor_baseColor.jpg"/>
           <img id="sky" src="images/sky.jpg" />
  <a-asset-item id="bar" src="images/scene.gltf"></a-asset-item>
       </a-assets>
