--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -52,7 +52,8 @@
         rotation="-90 0 0"
         width="100"
         height="100"
-        material="src: #wood2"
+        color="#darkbrown"
+        material="src: #wood3; repeat: 10 10 10"
         shadow>
       </a-plane>
     </a-scene>
