--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -15,15 +15,20 @@
           <img id="grass" src="images/grass.jpg" />
           <img id="wood3" src="images/Wooden_Floor_baseColor.jpeg"/>
           <img id="sky" src="images/sky.jpg" />
+            <img id="mat" src="images/Beer_Matt_baseColor.jpeg" />
  <a-asset-item id="bar" src="images/scene.gltf"></a-asset-item>
       </a-assets>
 
       <a-entity gltf-model="#bar"
-      scale="0.01 0.01 0.01"
+      scale="0.01 0.01 0.01" 
       position="0 0.284 0"
       >
     </a-entity>
 
+ <a-sky src="#sky"></a-sky>
+
+ <a-box id="mat" position="10 10 2" width="0.4" height ="0.1" material="src: #mat">
+ </a-box>
       <a-camera>
         <a-entity id="mouseCursor"
           cursor="fuse: true; fuseTimeout: 500
@@ -53,7 +58,7 @@
         width="100"
         height="100"
         color="#darkbrown"
-        material="src: #wood3; repeat: 10 10 10"
+        material="src: #wood3"
         shadow>
       </a-plane>
     </a-scene>
