--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -17,17 +17,36 @@
           <img id="sky" src="images/sky1.jpg" />
             <img id="mat" src="images/Beer_Matt_baseColor.jpeg" />
  <a-asset-item id="bar" src="images/scene.gltf"></a-asset-item>
+ <a-asset-item id="beer" src="images/beer_can (1)/scene.gltf"></a-asset-item>
+ <a-asset-item id="bourbon" src="images/bourbon_bottle (2)/scene.gltf"></a-asset-item>
+
       </a-assets>
 
-      <a-entity gltf-model="#bar"
-      scale="0.01 0.01 0.01"
+      <a-entity gltf-model="#beer"
+      scale="0.08 0.07 0.08"
       position="0 0.284 0"
       >
     </a-entity>
 
+    <a-entity gltf-model="#beer"
+    scale="0.06 0.06 0.06"
+    position="0 0.284 0"
+    >
+  </a-entity>
+  <a-entity gltf-model="#bourbon"
+  scale="0.03 0.03 0.03"
+  position="0 0.284 0"
+  >
+</a-entity>
+<a-entity gltf-model="#bar"
+scale="0.01 0.01 0.01"
+position="0 0.284 0"
+>
+</a-entity>
+
  <a-sky src="#sky"></a-sky>
 
- <a-box id="mat" position="-0.607 0.400 2.349" width="0.4" height ="0.1" material="src: #mat">
+ <a-box id="mat" position="-0.607 0.400 2.349" width="1" height ="2" material="src: #mat">
  </a-box>
       <a-camera>
         <a-entity id="mouseCursor"
@@ -57,7 +76,7 @@
         rotation="-90 0 0"
         width="100"
         height="100"
-    
+
         material="src: #wood3"
         shadow>
       </a-plane>
