--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -77,7 +77,7 @@ position="0 0.284 0"
         width="100"
         height="100"
 
-        material="src: #wood3"
+        material="src: #wood3 repaat 10 10"
         shadow>
       </a-plane>
     </a-scene>
