--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -46,7 +46,7 @@ position="0 0.284 0"
 
  <a-sky src="#sky"></a-sky>
 
- <a-box id="mat" position="-0.607 0.400 2.349" width="1" height ="2" material="src: #mat">
+ <a-box id="mat" position="-0.607 0.400 2.349" width="0.5" height ="0.3" material="src: #mat">
  </a-box>
       <a-camera>
         <a-entity id="mouseCursor"
@@ -77,7 +77,7 @@ position="0 0.284 0"
         width="100"
         height="100"
 
-        material="src: #wood3 repaat 10 10"
+        material="src: #wood3 repeat 10 10"
         shadow>
       </a-plane>
     </a-scene>
