--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -76,8 +76,8 @@ position="0 0.284 0"
         rotation="-90 0 0"
         width="100"
         height="100"
- 
-        material="src: #wood3; repeat 10 10"
+
+        material="src: #wood3; repeat 10 10 10"
         shadow>
       </a-plane>
     </a-scene>
