--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -13,7 +13,7 @@
           <img id="wood" src="images/wood.jpg" />
           <img id="wood2" src="images/wood2.jpg" />
           <img id="grass" src="images/grass.jpg" />
-          <img id="wood3" src="images/Wooden_Floor_baseColor.jpeg"/>
+          <img id="wood3" src="images/wood3.jpeg"/>
           <img id="sky" src="images/sky1.jpg" />
             <img id="mat" src="images/Beer_Matt_baseColor.jpeg" />
  <a-asset-item id="bar" src="images/scene.gltf"></a-asset-item>
@@ -77,7 +77,7 @@ position="0 0.284 0"
         width="100"
         height="100"
 
-        material="src: #wood3; repeat 10 10 10"
+        material="src: #wood3"
         shadow>
       </a-plane>
     </a-scene>
