--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -24,8 +24,18 @@
 
       <a-entity gltf-model="#beer"
       scale="0.08 0.07 0.08"
-      position="0 0.284 0"
+      position="-0.932 0.784 -0.238"
+      event-set__enter="_event: mouseenter; color: #green"
+
       >
+
+         <a-animation attribute="position"
+               dur="1000"
+               fill="forwards"
+               to="-0.932 1.5 -0.4"
+               direction="alternate"
+               begin="click"></a-animation>
+
     </a-entity>
 
     <a-entity gltf-model="#beer"
@@ -52,7 +62,7 @@ position="0 0.284 0"
         <a-entity id="mouseCursor"
           cursor="fuse: true; fuseTimeout: 500
           animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
-          animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 150; from: 0.2 0.2 0.2; to: 0.1 0.1 0.1"
+          animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 0 0 0"
           cursor="fuse: true;"
 
           material="color: black; shader: flat"
