--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -25,7 +25,7 @@
       <a-entity gltf-model="#beer"
       scale="0.08 0.07 0.08"
       position="-0.932 0.784 -0.238"
-      event-set__enter="_event: mouseenter; color: #green"
+      event-set__enter="_event: mouseenter; color: #lightgreen"
 
       >
 
