--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -59,25 +59,27 @@ position="0 0.284 0"
  <a-box id="mat" position="-0.607 0.400 2.349" width="0.5" height ="0.3" material="src: #mat">
  </a-box>
 
-
-
- <a-camera>
-  <a-entity position="0 2.2 4">
-     <a-entity camera look-controls wasd-controls>
-       <a-entity position="0 0 -3"
-                 geometry="primitive: ring; radiusInner: 0.2; radiusOuter: 0.3;"
-                 material="color: cyan; shader: flat"
-                 cursor="maxDistance: 30; fuse: true">
-         <a-animation begin="click" easing="ease-in" attribute="scale"
-              fill="forwards" from="0.2 0.2 0.2" to="1 1 1" dur="150"></a-animation>
-         <a-animation begin="fusing" easing="ease-in" attribute="scale"
-              fill="backwards" from="1 1 1" to="0.2 0.2 0.2" dur="1500"></a-animation>
-       </a-entity>
-     </a-entity>
-   </a-entity>
+<a-camera>
+  <a-entity id="mouseCursor"
+    cursor="fuse: true; fuseTimeout: 1500">
+  </a-entity>
+  <a-ring id="cursorRing"
+    position="0 0 -1"
+    radius-inner= "0.2"
+    radius-outer= "0.3"
+    material="color: red; shader: flat">
+  </a-ring>
+  <a-animation begin="click" easing="ease-in" attribute="scale"
+       fill="forwards" from="0.2 0.2 0.2" to="1 1 1" dur="150"></a-animation>
+  <a-animation begin="fusing" easing="ease-in" attribute="scale"
+       fill="backwards" from="1 1 1" to="0.2 0.2 0.2" dur="1500"></a-animation>
 </a-camera>
 
- 
+
+
+
+
+
 
       <a-plane id="ground"
         position="0 0 -4"
