--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -77,9 +77,39 @@ position="0 0.284 0"
 
 
 
+<a-camera>
+  <a-entity id="mouseCursor"
+    cursor="fuse: true; fuseTimeout: 500
+    animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
+    animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 150; from: 1 1 1; to: 0.1 0.1 0.1"
+    cursor="fuse: true;"
+    radius-inner= "0.02"
+    radius-outer= "0.03"
+    material="color: black; shader: flat"
+    position="0 0 -1"
+    geometry="primitive: ring">
 
 
+    <a-entity position="0 0 -3"
+              geometry="primitive: ring; radiusInner: 0.2; radiusOuter: 0.3;"
+              material="color: cyan; shader: flat"
+              cursor="maxDistance: 30; fuse: true">
+      <a-animation begin="click" easing="ease-in" attribute="scale"
+           fill="forwards" from="0.2 0.2 0.2" to="1 1 1" dur="150"></a-animation>
+      <a-animation begin="fusing" easing="ease-in" attribute="scale"
+           fill="backwards" from="1 1 1" to="0.2 0.2 0.2" dur="1500"></a-animation>
+    </a-entity>
 
+  </a-entity>
+
+  <a-ring id="cursorRing"
+    position="0 0 -1"
+    radius-inner= "0.02"
+    radius-outer= "0.03"
+    material="color: yellow; shader: flat">
+  </a-ring>
+
+</a-camera>
 
       <a-plane id="ground"
         position="0 0 -4"
