--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -63,12 +63,12 @@ position="0 0.284 0"
 
 <a-camera>
   <a-entity id="mouseCursor"
-    cursor="fuse: true; fuseTimeout: 1500">
+    cursor="fuse: true; maxDistance=30">
   </a-entity>
   <a-ring id="cursorRing"
     position="0 0 -1"
-    radius-inner= "0.2"
-    radius-outer= "0.3"
+    radius-inner= "0.02"
+    radius-outer= "0.03"
     material="color: red; shader: flat">
   </a-ring>
   <a-animation begin="click" easing="ease-in" attribute="scale"
