--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -63,23 +63,25 @@ position="0 0.284 0"
 
 <a-camera>
   <a-entity id="mouseCursor"
-    cursor="fuse: true; maxDistance=30">
+    cursor="fuse: true; fuseTimeout=1500">
   </a-entity>
   <a-ring id="cursorRing"
     position="0 0 -1"
-    radius-inner= "0.02"
-    radius-outer= "0.03"
+    radius-inner= "0.2"
+    radius-outer= "0.3"
     material="color: red; shader: flat">
-  </a-ring>
+
   <a-animation begin="click" easing="ease-in" attribute="scale"
        fill="forwards" from="0.2 0.2 0.2" to="1 1 1" dur="150"></a-animation>
   <a-animation begin="fusing" easing="ease-in" attribute="scale"
        fill="backwards" from="1 1 1" to="0.2 0.2 0.2" dur="1500"></a-animation>
+
+</a-ring>
 </a-camera>
 
 
       <a-plane id="ground"
-        position="0 0 -4" 
+        position="0 0 -4"
         rotation="-90 0 0"
         width="100"
         height="100"
