--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -63,18 +63,18 @@ position="0 0.284 0"
 
 <a-camera>
   <a-entity id="mouseCursor"
-    cursor="fuse: true; fuseTimeout=1500; maxDistance=30;">
+    cursor="fuse: true; fuseTimeout=1500;">
   </a-entity>
   <a-ring id="cursorRing"
-    position="0 0 -3"
+    position="0 0 -1"
     radius-inner= "0.02"
     radius-outer= "0.03"
     material="color: red; shader: flat">
 
   <a-animation begin="click" easing="ease-in" attribute="scale"
-       fill="forwards" from="0.02 0.02 0.02" to="0.05 0.05 0.05" dur="150"></a-animation>
+       fill="forwards" from="0.2 0.2 0.2" to="1 1 1" dur="150"></a-animation>
   <a-animation begin="fusing" easing="ease-in" attribute="scale"
-       fill="backwards" from="0.05 0.05 0.05" to="0.02 0.02 0.02" dur="1500"></a-animation>
+       fill="backwards" from="1 1 1" to="0.2 0.2 0.02" dur="1500"></a-animation>
 
 </a-ring>
 </a-camera>
