--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -15,6 +15,7 @@
           <img id="grass" src="images/grass.jpg" />
           <img id="wood3" src="images/wood4.jpeg"/>
           <img id="sky" src="images/sky1.jpg" />
+            <img id="table" src="images/download.jpg" />
             <img id="mat" src="images/Beer_Matt_baseColor.jpeg" />
  <a-asset-item id="bar" src="images/scene.gltf"></a-asset-item>
  <a-asset-item id="beer" src="images/beer_can (1)/scene.gltf"></a-asset-item>
@@ -56,7 +57,7 @@ position="0 0.284 0"
 
  <a-sky src="#sky"></a-sky>
 
- <a-box id="mat" position="-0.607 0.400 2.349" width="0.5" height ="0.3" material="src: #mat">
+ <a-box id="table" position="-0.607 0.400 2.349" width="0.5" height ="0.3" material="src: #table">
  </a-box>
 
 
@@ -66,6 +67,7 @@ position="0 0.284 0"
     cursor="fuse: true; fuseTimeout=1500;">
   </a-entity>
   <a-ring id="cursorRing"
+    cursor="fuse: true; fuseTimeout=1500;"
     position="0 0 -1"
     radius-inner= "0.02"
     radius-outer= "0.03"
@@ -77,6 +79,8 @@ position="0 0.284 0"
        fill="backwards" from="1 1 1" to="0.2 0.2 0.02" dur="1500"></a-animation>
 
 </a-ring>
+
+
 </a-camera>
 
 
