--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -64,10 +64,10 @@ position="0 0.284 0"
 
 <a-camera>
   <a-entity id="mouseCursor"
-    cursor="fuse: true; fuseTimeout=1500;">
+    cursor="fuse: true; fuseTimeout: 1500; maxDistance: 30">
   </a-entity>
   <a-ring id="cursorRing"
-    cursor="fuse: true; fuseTimeout=1500;"
+
     position="0 0 -3"
     radius-inner= "0.02"
     radius-outer= "0.03"
@@ -78,7 +78,6 @@ position="0 0.284 0"
        fill="forwards" from="0.2 0.2 0.2" to="1 1 1" dur="150"></a-animation>
   <a-animation begin="fusing" easing="ease-in" attribute="scale"
        fill="backwards" from="1 1 1" to="0.2 0.2 0.02" dur="1500"></a-animation>
-
 
 </a-camera>
 
