--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -70,7 +70,8 @@ position="0 0.284 0"
     position="0 0 -3"
     radius-inner= "0.1"
     radius-outer= "0.1"
-    material="color: red; shader: flat">
+    material="color: red; shader: flat"
+    geometry="primitive: ring">
 </a-entity>
 
 </a-camera>
