--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -64,19 +64,19 @@ position="0 0.284 0"
 
 <a-camera>
   <a-entity id="mouseCursor"
-    cursor="fuse: true; fuseTimeout: 1500; maxDistance: 30"
+    cursor="fuse: true; fuseTimeout: 1500"  
     animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
     animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 150; from: 1 1 1; to: 0.1 0.1 0.1"
     position="0 0 -3"
     radius-inner= "0.1"
     radius-outer= "0.1"
     material="color: red; shader: flat"
-
-    geometry="primitive: ring">
+    geometry="primitive: ring;  radius-inner: 0.2;
+      radius-outer: 0.3 ">
 </a-entity>
 
 </a-camera>
- 
+
 
       <a-plane id="ground"
         position="0 0 -4"
