--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -23,23 +23,22 @@
 
       </a-assets>
 
+      <a-entity position="0 2.2 4">
+          <a-entity camera look-controls wasd-controls>
+            <a-entity position="0 0 -3"
+                      geometry="primitive: ring; radiusInner: 0.2; radiusOuter: 0.3;"
+                      material="color: cyan; shader: flat"
+                      cursor="maxDistance: 30; fuse: true">
+              <a-animation begin="click" easing="ease-in" attribute="scale"
+                   fill="forwards" from="0.2 0.2 0.2" to="1 1 1" dur="150"></a-animation>
+              <a-animation begin="fusing" easing="ease-in" attribute="scale"
+                   fill="backwards" from="1 1 1" to="0.2 0.2 0.2" dur="1500"></a-animation>
+            </a-entity>
+          </a-entity>
+        </a-entity>
+        
 
-      <a-camera>
-        <a-entity id="mouseCursor"
-          cursor="fuse: true; fuseTimeout: 1500"
-          animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
-          animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 150; from: 1 1 1; to: 0.1 0.1 0.1"
-          position="0 0 -3"
-          radius-inner= "0.1"
-          radius-outer= "0.1"
-          material="color: red; shader: flat"
-          geometry="primitive: ring;  radius-inner: 0.1;
-            radius-outer: 0.1 ">
-      </a-entity>
 
-      </a-camera>
-
-       
       <a-entity gltf-model="#beer"
       scale="0.08 0.07 0.08"
       position="-0.932 0.784 -0.238"
