--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -43,9 +43,7 @@
       <a-entity gltf-model="#beer"
       scale="0.08 0.07 0.08"
       position="-0.932 0.784 -0.238"
-      event-set__enter="_event: mouseenter; color: #green"
-
-      >
+      event-set__enter="_event: mouseenter; color: #green">
 
          <a-animation attribute="position"
                dur="1000"
@@ -57,13 +55,13 @@
     </a-entity>
 
     <a-entity gltf-model="#beer"
-    scale="0.06 0.06 0.06"
+    scale="0.06 0.06 0.05"
     position="-0.094 0.643 -0.312"
     >
   </a-entity>
   <a-entity gltf-model="#bourbon"
   scale="0.06 0.06 0.05"
-  position="1.074 0.626 -0.229"
+  position="1.074 0.627 -0.229"
   >
 </a-entity>
 <a-entity gltf-model="#bar"
