--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -23,20 +23,16 @@
 
       </a-assets>
 
-      <a-entity position="0 2.2 4">
-          <a-entity camera look-controls wasd-controls>
-            <a-entity position="0 0 -3"
-                      geometry="primitive: ring; radiusInner: 0.2; radiusOuter: 0.3;"
-                      material="color: cyan; shader: flat"
-                      cursor="maxDistance: 30; fuse: true;"
-                    >
-              <a-animation begin="click" easing="ease-in" attribute="scale"
-                   fill="forwards" from="0.2 0.2 0.2" to="1 1 1" dur="150"></a-animation>
-              <a-animation begin="fusing" easing="ease-in" attribute="scale"
-                   fill="backwards" from="1 1 1" to="0.2 0.2 0.2" dur="1500"></a-animation>
-            </a-entity>
-          </a-entity>
-        </a-entity>
+    
+
+        <a-entity
+          animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
+          animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1500; from: 1 1 1; to: 0.1 0.1 0.1"
+          animation__mouseleave="property: scale; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 1 1 1"
+          cursor="fuse: true;"
+          material="color: black; shader: flat"
+          position="0 0 -3"
+          geometry="primitive: ring"></a-entity>
 
 
 
@@ -45,6 +41,7 @@
       position="-0.932 0.784 -0.238"
       event-set__enter="_event: mouseenter; color: #green">
 
+animation__fusing
          <a-animation attribute="position"
                dur="1000"
                fill="forwards"
