--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -22,17 +22,17 @@
  <a-asset-item id="bourbon" src="images/bourbon_bottle (2)/scene.gltf"></a-asset-item>
 
       </a-assets>
+ 
 
-    
 
-        <a-entity
-          animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
-          animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1500; from: 1 1 1; to: 0.1 0.1 0.1"
-          animation__mouseleave="property: scale; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 1 1 1"
-          cursor="fuse: true;"
-          material="color: black; shader: flat"
-          position="0 0 -3"
-          geometry="primitive: ring"></a-entity>
+                <a-entity
+                  animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
+                  animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1500; from: 1 1 1; to: 0.1 0.1 0.1"
+                  animation__mouseleave="property: scale; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 1 1 1"
+                  cursor="fuse: true;"
+                  material="color: cyan; shader: flat"
+                  position="0 0 -3"
+                  geometry="primitive: ring"></a-entity>
 
 
 
@@ -41,7 +41,6 @@
       position="-0.932 0.784 -0.238"
       event-set__enter="_event: mouseenter; color: #green">
 
-animation__fusing
          <a-animation attribute="position"
                dur="1000"
                fill="forwards"
