--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -29,11 +29,10 @@
               animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
               animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1500; from: 1 1 1; to: 0.1 0.1 0.1"
               animation__mouseleave="property: scale; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 1 1 1"
-              cursor="fuse: true; radius-inner: 0.02;
-              radius-outer: 0.03"
+              cursor="fuse: true; maxDistance:15"
               material="color: cyan; shader: flat"
               position="0 0 -3"
-              geometry="primitive: ring; "></a-entity>
+              geometry="primitive: ring; radiusInner:0.2; radiusOuter: 0.3 "></a-entity>
           </a-entity>
         //</a-entity>
 
