--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -41,7 +41,7 @@
 
 
 
-      <a-entity gltf-model="#beer"
+      <a-entity gltf-model="#beer" id="beer1"
       scale="0.08 0.07 0.08"
       position="-0.932 0.784 -0.238"
       event-set__enter="_event: mouseenter; color: #green">
@@ -55,12 +55,12 @@
 
      </a-entity>
 
-    <a-entity gltf-model="#beer1"
+    <a-entity gltf-model="#beer" id="beer2"
     scale="0.06 0.06 0.05"
     position="-0.932 0.674 -0.298"
     >
   </a-entity>
-  <a-entity gltf-model="#bourbon"
+  <a-entity gltf-model="#bourbon" id="bourbon1"
   scale="0.06 0.06 0.05"
   position="1.074 0.627 -0.229"
   >
