--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -21,9 +21,18 @@
  <a-asset-item id="beer" src="images/beer_can (1)/scene.gltf"></a-asset-item>
  <a-asset-item id="bourbon" src="images/bourbon_bottle (2)/scene.gltf"></a-asset-item>
 
+ <a-asset-item id="music" src="images/music/scene.gltf"></a-asset-item>
+
+<a-asset-item id="tables" src="images/restaurant1/scene.gltf"></a-asset-item>
+ <a-asset-item id="song1" src="images/song1.mp3"></a-asset-item>
+ <a-asset-item id="song2" src="images/song2.mp3"></a-asset-item>
+ <a-asset-item id="song3" src="images/song3.mp3"></a-asset-item>
+ <a-asset-item id="song4" src="images/song4.mp3"></a-asset-item>
+ <a-asset-item id="song5" src="images/song5.mp3"></a-asset-item>
+
       </a-assets>
 
-      //<a-entity position="0 2.2 4">
+      <a-entity position="0 2.2 4">
           <a-entity camera look-controls wasd-controls>
             <a-entity
               animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
@@ -34,10 +43,12 @@
               position="0 0 -1"
               geometry="primitive: ring; radiusInner:0.02; radiusOuter: 0.03 "></a-entity>
           </a-entity>
-        //</a-entity>
+      </a-entity>
 
 
-
+      <a-entity id="music"  gltf-model="#music" id="music"
+      scale="0.01 0.01 0.01"
+                position="-10 0 0" sound="src: #song1; autoplay: true"></a-entity>
 
 
 
@@ -69,6 +80,15 @@
   position="1.074 0.627 -0.229"
   >
 </a-entity>
+
+
+<a-entity gltf-model="#tables"
+scale="0.01 0.01 0.01"
+position="0 0.284 0"
+>
+</a-entity>
+
+
 <a-entity gltf-model="#bar"
 scale="0.01 0.01 0.01"
 position="0 0.284 0"
