--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -14,7 +14,7 @@
           <img id="wood2" src="images/wood2.jpg" />
           <img id="grass" src="images/grass.jpg" />
           <img id="wood3" src="images/wood4.jpeg"/>
-          <img id="sky" src="images/sky1.jpg" />
+          <img id="sky" src="images/1.jpg" />
             <img id="table" src="images/download.jpg" />
             <img id="mat" src="images/Beer_Matt_baseColor.jpeg" />
  <a-asset-item id="bar" src="images/scene.gltf"></a-asset-item>
@@ -83,8 +83,8 @@
 
 
 <a-entity gltf-model="#tables"
-scale="0.01 0.01 0.01"
-position="0 0.284 0"
+scale="1 1 1"
+position="-0.607 5 2.349"
 >
 </a-entity>
 
