--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -24,11 +24,11 @@
  <a-asset-item id="music" src="images/music/scene.gltf"></a-asset-item>
 
 <a-asset-item id="tables" src="images/restaurant1/scene.gltf"></a-asset-item>
- <a-asset-item id="song1" src="images/song1.mp3"></a-asset-item>
- <a-asset-item id="song2" src="images/song2.mp3"></a-asset-item>
- <a-asset-item id="song3" src="images/song3.mp3"></a-asset-item>
- <a-asset-item id="song4" src="images/song4.mp3"></a-asset-item>
- <a-asset-item id="song5" src="images/song5.mp3"></a-asset-item>
+ <audio id="song1" src="images/song1.mp3"  preload="auto"></a-asset-item>
+ <audio id="song2" src="images/song2.mp3"  preload="auto"></a-asset-item>
+ <audio id="song3" src="images/song3.mp3"  preload="auto"></a-asset-item>
+ <audio id="song4" src="images/song4.mp3"  preload="auto"></a-asset-item>
+ <audio id="song5" src="images/song5.mp3"  preload="auto"></a-asset-item>
 
       </a-assets>
 
@@ -48,9 +48,9 @@
 
       <a-entity id="music"  gltf-model="#music" id="music"
       scale="0.01 0.01 0.01"
-                position="-10 0 0" sound="src: #song1; autoplay: true"></a-entity>
+                position="-2.719 1.434 -0.007" sound="src: #song1; autoplay: true"></a-entity>
 
-
+ -2.719 1.434 -0.007
 
       <a-entity gltf-model="#beer" id="beer1"
       scale="0.08 0.07 0.08"
