--- a/AR/index.html
+++ b/AR/index.html
@@ -15,10 +15,11 @@
 </a-assets>
     <a-scene embedded arjs>
       <a-entity gltf-model="#beer" id="beer2"
-      scale="0.06 0.06 0.05"
+      scale="0.6 0.6 0.5"
+      position="0 0.5 0"
       >
     </a-entity>
-      <a-marker-camera type='pattern' src='images/marker.patt'></a-marker-camera>
+      <a-marker-camera type='pattern' src='images/pattern-download.patt'></a-marker-camera>
     </a-scene>
   </body>
 </html>
