--- a/AR/index.html
+++ b/AR/index.html
@@ -16,8 +16,15 @@
     <a-scene embedded arjs>
       <a-entity gltf-model="#beer" id="beer2"
       scale="0.06 0.06 0.05"
-      position="0 0 0"
+      position="0 0.5 0"
       >
+      <a-animation attribute="scale"
+      dur="1000"
+      from= "1 1 1"
+      to="2 2 2"
+      direction="alternate-reverse"
+      easeing="ease-in-out-circ"
+      repeat="infefinite"></a-animation>
     </a-entity>
       <a-marker-camera type='pattern' src='images/pattern-download.patt'></a-marker-camera>
     </a-scene>
