--- a/AR/index.html
+++ b/AR/index.html
@@ -14,7 +14,7 @@
     <a-asset-item id="beer" src="images/beer_can (1)/scene.gltf"></a-asset-item>
 </a-assets>
     <a-scene embedded arjs>
-      <a-marker-camera type='pattern' src='images/pattern-download.patt'>
+      <a-marker type='pattern' url='images/pattern-download.patt'>
 
 
 
@@ -34,8 +34,8 @@
 
 
     </a-entity>
-      </a-marker-camera>
-        
+      </a-marker>
+
     </a-scene>
   </body>
 </html>
