--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -84,12 +84,16 @@
     animation__mouseenter="property: rotation; to: 0 360 0; loop: true; dur: 10000";
     animation__mouseleave="property: rotation; to: 0 0 0; loop: true; dur: 10000";
 
-
+    animation__mouseenter=sound="src: #song3; autoplay: true";
+    animation__mouseleave=sound="src: #song1; autoplay: true";
     >
   </a-entity>
   <a-entity gltf-model="#bourbon" id="bourbon1"
   scale="0.06 0.06 0.05"
   position="1.074 0.627 -0.229"
+
+  animation__mouseenter=sound="src: #song4; autoplay: true";
+  animation__mouseleave=sound="src: #song1; autoplay: true";
   >
 </a-entity>
 
@@ -97,6 +101,10 @@
 <a-entity gltf-model="#tables"
 scale="1 1 1"
 position="6.367 0.067 2.759"
+
+animation__mouseenter=sound="src: #song2; autoplay: true";
+animation__mouseleave=sound="src: #song1; autoplay: true";
+
 >
 </a-entity>
 
