--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -117,7 +117,10 @@ position="0 0.284 0"
 
  <a-sky src="#sky"></a-sky>
 
- <a-box id="table" position="-0.607 0.400 2.349" width="0.5" height ="0.3" material="src: #table">
+ <a-box id="table" position="-0.607 0.400 2.349" width="0.5" height ="0.3" material="src: #table"
+
+   animation__mouseenter=sound="src: #song5; autoplay: true";
+   animation__mouseleave=sound="src: #song1; autoplay: true";>
  </a-box>
 
  <a-entity position="-3.5 1 0">
