--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -9,14 +9,13 @@
   </head>
   <body>
     <a-scene background="color: #FAFAFA">
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#" shadow></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
-
+    
         <a-triangle color="#298fca" position="1 2 2"></a-triangle>
           <a-triangle color="#3895de3" position="1 2 2" height="1.4" radius ></a-triangle>
         <a-triangle color="#bcd9ea" vertex-c="1 -1 0"></a-triangle>
           •<a-sphere color="yellow" position="1 5 2" radius="5"></a-sphere>
+
+            •<a-sphere color="yellow" position="2 3 10" radius="10"></a-sphere>
 
 
 
