--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -9,16 +9,13 @@
   </head>
   <body>
     <a-scene background="color: #FAFAFA">
-    
+
         <a-triangle color="#298fca" position="1 2 2"></a-triangle>
-          <a-triangle color="#3895de3" position="1 2 2" height="1.4" radius ></a-triangle>
+          <a-triangle color="#3895de3" position="1 2 2" height="1.4" ></a-triangle>
         <a-triangle color="#bcd9ea" vertex-c="1 -1 0"></a-triangle>
-          •<a-sphere color="yellow" position="1 5 2" radius="5"></a-sphere>
+          •<a-sphere color="yellow" position="1 5 2" radius="0.5"></a-sphere>
 
-            •<a-sphere color="yellow" position="2 3 10" radius="10"></a-sphere>
-
-
-
+            •<a-sphere color="yellow" position="2 3 10" radius="0.1"></a-sphere>
 
 
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
