--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <a-scene background="color: #FAFAFA">
+      <a-cylinder color="yellow" position = "1 3 6" theta-start="50" theta-length="280" side="double"></a-cylinder>
+
 
         <a-triangle color="#298fca" position="1 2 2"></a-triangle>
           <a-triangle color="#3895de3" position="1 2 2" height="1.4" ></a-triangle>
